--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,63 @@
-html,
-body {
+@import url('https://fonts.googleapis.com/css2?family=Chivo&family=Raleway:ital,wght@0,200;0,900;1,900&display=swap');
+
+html {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Chivo', 'Raleway', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  display: flex;
+  justify-content: center;
+}
+
+body {
+  max-width: 1550px;
+  padding: 0;
+  margin: 0;
+  font-family: 'Chivo', 'Raleway', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  font-size: 18px;
+  line-height: 150%;
+  font-family: 'Chivo', sans-serif;
+}
+
+h1 {
+  font-size: 50px;
+  font-family: 'Raleway', sans-serif;
+  font-style: italic;
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 30px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+}
+
+@media only screen and (max-width: 600px) {
+  p {
+    font-size: 18px;
+    line-height: 150%;
+    font-family: 'Chivo', sans-serif;
+  }
+
+  h1 {
+    font-size: 40px;
+    font-family: 'Raleway', sans-serif;
+    font-style: italic;
+    font-weight: 900;
+  }
+
+  h2 {
+    font-size: 26px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+  }
 }
 
 a {
