--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,38 +5,83 @@
   min-height: 100vh;
   width: 90%;
 }
-
 .firstSectionContainer {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  width: 60%;
+  width: 100%;
   height: 100vh;
 }
 
 .projectInfoContainer {
+  margin-top: 100px;
+  padding: 80px 0;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
 }
 
-.projectInfoContainer div {
-  padding: 10px;
-  width: 33%;
+.projectInfoContainer > div {
+  width: 100%;
 }
 
-@media only screen and (max-width: 700px) {
+.titleImageContainer {
+  margin-left: 0;
+  background: white;
+  backdrop-filter: blur(10);
+}
+
+.speakerImage {
+  padding-top: 80px;
+  width: 100%;
+}
+
+@media only screen and (min-width: 700px) {
+  .speakerImage {
+    position: absolute;
+    right: 25%;
+    top: 28%;
+    z-index: -1;
+    width: 400px;
+  }
+  .titleImageContainer {
+    margin-left: 15%
+  }
   .projectInfoContainer {
     display: flex;
-    flex-direction: column;
     justify-content: space-around;
+    align-items: center;
   }
-  .projectInfoContainer div {
-    width: 100%;
+  .projectInfoContainer > div {
+    padding: 10px;
+    width: 50%;
   }
   .firstSectionContainer {
-    justify-content: start;
-    width: 100%;
+    align-items: center;
+    width: 80%;
+    height: 100vh;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .speakerImage {
+    position: absolute;
+    right: 20%;
+    top: 20%;
+    z-index: -1;
+    width: 500px;
+  }
+  .projectInfoContainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .projectInfoContainer > div {
+    padding: 10px;
+    width: 30%;
+  }
+  .firstSectionContainer {
+    align-items: center;
+    width: 60%;
     height: 100vh;
   }
 }
