--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ html {
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 body {
