--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,7 @@
 }
 .firstSectionContainer {
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
 }
@@ -25,9 +26,8 @@
 }
 
 .titleImageContainer {
-  margin-left: 0;
-  background: white;
-  backdrop-filter: blur(10);
+  background: unset;
+  backdrop-filter: unset;
 }
 
 .speakerImage {
@@ -38,13 +38,17 @@
 @media only screen and (min-width: 700px) {
   .speakerImage {
     position: absolute;
-    right: 25%;
+    right: 20%;
     top: 28%;
     z-index: -1;
     width: 400px;
   }
   .titleImageContainer {
-    margin-left: 15%
+    margin-left: 15%;
+    backdrop-filter: blur(15px);
+    border-radius: 15px;
+    -webkit-box-shadow: 0px 0px 22px -8px #000000;
+    box-shadow: 0px 0px 22px -8px #000000;
   }
   .projectInfoContainer {
     display: flex;
@@ -57,15 +61,21 @@
   }
   .firstSectionContainer {
     align-items: center;
+    flex-direction: row;
     width: 80%;
     height: 100vh;
+  }
+  .titleImageContainer {
+    margin-left: 0;
+    padding: 30px;
+
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .speakerImage {
     position: absolute;
-    right: 20%;
+    right: 10%;
     top: 20%;
     z-index: -1;
     width: 500px;
