--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,18 +12,37 @@
   height: 100vh;
 }
 
+.buttonHome {
+  font-family: "Raleway", sans-serif;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  transition: all .3s;
+  box-shadow: 6px 6px 12px #c5c5c5,
+  -6px -6px 12px #ffffff;
+}
+
+.buttonHome:hover {
+  border: 1px solid #ffae00;
+}
+
+.buttonHome:active {
+  box-shadow: 4px 4px 12px #c5c5c5,
+  -4px -4px 12px #ffffff;
+}
+
 .projectInfoContainer {
   margin-top: 100px;
   padding: 80px 0;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  height: 100vh;
+  min-height: 50vh;
 }
 
-.projectInfoContainer > div {
-  width: 100%;
-}
 
 .titleImageContainer {
   background: unset;
@@ -33,6 +52,23 @@
 .speakerImage {
   width: 100%;
 }
+
+.card {
+  width: 90%;
+  margin: 5% 0;
+  padding: 5% 5%;
+  border: 2px solid transparent;
+  border-radius: 30px;
+  background: #e0e0e0;
+  box-shadow: 15px 15px 30px #bebebe,
+  -15px -15px 30px #ffffff;
+  transition: all 0.4s;
+}
+
+.card:hover {
+  border: 2px solid #ffae00;
+}
+
 
 @media only screen and (min-width: 700px) {
   .speakerImage {
@@ -50,9 +86,10 @@
     justify-content: space-around;
     align-items: center;
   }
-  .projectInfoContainer > div {
-    padding: 10px;
-    width: 50%;
+  .card {
+    min-height: 400px;
+    padding: 5% 5%;
+    width: 45%;
   }
   .firstSectionContainer {
     align-items: center;
@@ -79,8 +116,8 @@
     justify-content: space-around;
     align-items: center;
   }
-  .projectInfoContainer > div {
-    padding: 10px;
+  .card {
+    padding: 5% 3%;
     width: 30%;
   }
   .firstSectionContainer {
