--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,12 +14,16 @@ body {
   max-width: 1550px;
   padding: 0;
   margin: 0;
+  background-color: #e8e8e8;
   font-family: 'Chivo', 'Raleway', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   width: 100%;
   display: flex;
   justify-content: center;
 }
+
+
+
 
 p {
   font-size: 18px;
