--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,28 +1,36 @@
 .mainContainer {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
   min-height: 100vh;
-  width: 90%;
 }
+
 .firstSectionContainer {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  padding: 5%;
   height: 100vh;
 }
 
 .buttonHome {
+  cursor: pointer;
   font-family: "Raleway", sans-serif;
-  color: #090909;
+  color: inherit;
   padding: 0.7em 1.7em;
   font-size: 18px;
   border-radius: 0.5em;
   background: #e8e8e8;
-  border: 1px solid #e8e8e8;
+  border: 1px solid transparent;
   transition: all .3s;
   box-shadow: 6px 6px 12px #c5c5c5,
   -6px -6px 12px #ffffff;
+}
+
+.buttonHome.dark {
+  background: #1a1717;
+  box-shadow: 6px 6px 12px #110e0e,
+  -6px -6px 12px #232321;
 }
 
 .buttonHome:hover {
@@ -65,6 +73,12 @@
   transition: all 0.4s;
 }
 
+.cardDark {
+  background: #1a1717;
+  box-shadow: 15px 15px 30px #110e0e,
+  -15px -15px 30px #232121;
+}
+
 .card:hover {
   border: 2px solid #ffae00;
 }
@@ -92,6 +106,7 @@
     width: 45%;
   }
   .firstSectionContainer {
+    padding: 0;
     align-items: center;
     flex-direction: row;
     width: 80%;
