--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ body {
   max-width: 1550px;
   padding: 0;
   margin: 0;
-  background-color: #e8e8e8;
+  background-color: #1a1717;
   font-family: 'Chivo', 'Raleway', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   width: 100%;
@@ -22,13 +22,29 @@ body {
   justify-content: center;
 }
 
+.body-light {
+  background-color: #e8e8e8;
+}
 
-
+svg {
+  width: 45px;
+  height: 45px;
+  transition: all .4s;
+}
 
 p {
   font-size: 18px;
   line-height: 150%;
   font-family: 'Chivo', sans-serif;
+  transition: all .4s;
+}
+
+svg.dark {
+  fill: #e8e8e8;
+}
+
+p.dark, h1.dark, h2.dark, h3.dark, div.dark {
+  color: #e8e8e8;
 }
 
 h1 {
@@ -36,12 +52,14 @@ h1 {
   font-family: 'Raleway', sans-serif;
   font-style: italic;
   font-weight: 900;
+  transition: all .4s;
 }
 
 h2 {
   font-size: 30px;
   font-family: 'Raleway', sans-serif;
   font-weight: 200;
+  transition: all .4s;
 }
 
 @media only screen and (max-width: 600px) {
