--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,34 @@ body {
   background-color: #e8e8e8;
 }
 
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+/*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+!* Handle *!
+::-webkit-scrollbar-thumb {
+  background: #ffae00;
+  border-radius: 10px;
+}*/
+
+
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  box-shadow: inset 0 0 20px 20px transparent;
+  border: solid 6px transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 10px 10px #ffae00;
+  border: solid 6px transparent;
+}
 svg {
   width: 45px;
   height: 45px;
