--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,7 +43,6 @@
 }
 
 .projectInfoContainer {
-  margin-top: 100px;
   padding: 80px 0;
   display: flex;
   justify-content: space-around;
@@ -86,8 +85,22 @@
   background: #e0e0e0;
   box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.1),
   -15px -15px 30px rgba(255, 255, 255, 0.65);
-  transition: all 0.4s;
+  transition: all 0.6s;
 }
+
+/*
+.card:hover.dark p {
+  color: #e8e8e8;
+}
+
+.card:hover p {
+  color: black;
+}
+
+.card p {
+  color: transparent;
+}
+*/
 
 .cardDark {
   background: #1a1717;
@@ -100,7 +113,7 @@
 }
 
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 764px) {
   .speakerImage {
     position: absolute;
     right: 20%;
@@ -114,7 +127,7 @@
   .projectInfoContainer {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
   }
   .card {
     min-height: 400px;
@@ -145,7 +158,7 @@
   .projectInfoContainer {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
   }
   .card {
     padding: 5% 3%;
