--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -110,6 +110,9 @@
 
 .card:hover {
   border: 2px solid #ffae00;
+  border-radius: 50px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 
