--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,7 +44,7 @@
 }
 
 .projectInfoContainer {
-  padding: 80px 0;
+  padding-bottom: 80px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -89,6 +89,20 @@
   transition: all 0.6s;
 }
 
+.appSection {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  width: 80%;
+  justify-content: space-around;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.appSection div {
+  margin-left: 0;
+  text-align: center;
+}
+
 /*
 .card:hover.dark p {
   color: #e8e8e8;
@@ -118,6 +132,18 @@
 
 
 @media only screen and (min-width: 764px) {
+  .appSection {
+    flex-wrap: unset;
+    display: flex;
+    width: 60%;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .appSection div {
+    margin-left: 10%;
+    text-align: left;
+  }
   .speakerImage {
     position: absolute;
     right: 20%;
