--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,37 @@ body {
   justify-content: center;
 }
 
+img {
+  cursor: pointer;
+  height: 500px;
+  border: 2px solid transparent;
+  border-radius: 20px;
+  background: #e0e0e0;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.1),
+  -15px -15px 30px rgba(255, 255, 255, 0.65);
+  transition: all 0.6s;
+}
+
+img.dark {
+  background: #1a1717;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.25),
+  -15px -15px 30px rgba(255, 255, 255, 0.03);
+}
+
+svg.sm {
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+img:hover {
+  border: 2px solid #ffae00;
+  border-radius: 30px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
 .body-light {
   background-color: #e8e8e8;
 }
@@ -103,7 +134,7 @@ h2 {
   transition: all .4s;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 764px) {
   p {
     font-size: 18px;
     line-height: 150%;
