--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,7 +44,6 @@
 }
 
 .projectInfoContainer {
-  padding-bottom: 80px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -55,6 +54,7 @@
   background: #e0e0e0;
   width: 80%;
   height: 25px;
+  margin: 50px 0;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15),
   -2px -2px 10px rgba(255, 255, 255, 1), inset 2px 2px 10px rgba(0, 0, 0, 0.15),
   inset -2px -2px 10px rgba(255, 255, 255, 1);
@@ -98,6 +98,17 @@
   margin-bottom: 50px;
 }
 
+.chipContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.chipContainer div {
+  margin: 40px 0
+}
+
+
 .appSection div {
   margin-left: 0;
   text-align: center;
@@ -125,9 +136,7 @@
 
 .card:hover {
   border: 2px solid #ffae00;
-  border-radius: 50px;
-  border-bottom-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 50px 5px 50px 5px;
 }
 
 
@@ -140,7 +149,7 @@
     margin-top: 50px;
     margin-bottom: 50px;
   }
-  .appSection div {
+  .appSection > div {
     margin-left: 10%;
     text-align: left;
   }
@@ -175,6 +184,15 @@
     margin-left: 0;
     padding: 30px;
 
+  }
+  .chipContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .chipContainer div {
+    margin-top: 20px;
+    margin-right: 20px;
   }
 }
 
