--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,17 @@ img {
   transition: all 0.6s;
 }
 
+img.pure {
+  height: 100px;
+  background: transparent;
+  border: 0 solid transparent;
+  box-shadow: unset;
+}
+
+img.pure:hover {
+  border: 0
+}
+
 img.dark {
   background: #1a1717;
   box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.25),
