--- a/styles/Chip.module.css
+++ b/styles/Chip.module.css
@@ -1,10 +1,17 @@
 .chip {
     cursor: default;
-    color: #ffae00;
+    color: #ffae00 ;
     border: 1px solid #ffae00;
     background: transparent;
     border-radius: 50px;
     padding: 8px 20px;
     width: fit-content;
     font-style: italic;
+    transition: all 0.4s;
+}
+
+
+.chip:hover {
+    background: #ffae00;
+    color: white ;
 }
