--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,8 @@ img {
 
 img.pure {
   height: 100px;
+  width: 100px;
+  object-fit: cover;
   background: transparent;
   border: 0 solid transparent;
   box-shadow: unset;
