--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,6 +1,8 @@
 .menuContainer {
     position: fixed;
     top: 5%;
-    right: 5%;
     transition: all 0.4s;
+    display: flex;
+    justify-content: space-around;
+    width: 150%;
 }
