--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,10 +76,22 @@
   width: 100%;
 }
 
+.conceptProduct {
+  display: flex;
+}
+
+.issue {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  text-align: justify;
+}
+
 .card {
   cursor: pointer;
   width: 90%;
-  margin: 5% 0;
+  margin: 5% 5%;
   padding: 5% 5%;
   border: 2px solid transparent;
   border-radius: 20px;
@@ -185,15 +197,20 @@
     margin-left: 15%;
     border-radius: 15px;
   }
-  .projectInfoContainer {
+  /* .projectInfoContainer {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
+  } */
+  .productInfoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
   }
+
   .card {
-    min-height: 400px;
     padding: 5% 5%;
-    width: 45%;
+    margin: 2% 2%;
   }
   .firstSectionContainer {
     padding: 0;
@@ -225,15 +242,15 @@
     top: 20%;
     width: 500px;
   }
-  .projectInfoContainer {
+  /* .projectInfoContainer {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-  }
-  .card {
+  } */
+  /* .card {
     padding: 5% 3%;
     width: 30%;
-  }
+  } */
   .firstSectionContainer {
     align-items: center;
     width: 60%;
