--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -3,14 +3,17 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: baseline;
     width: 90%;
 }
 
 .member {
     display: flex;
+    text-align: center;
     flex-direction: column;
     align-items: center;
     max-width: 300px;
+    height: 250px;
     justify-content: center;
     width: 90%;
 }
