--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,42 +1,289 @@
 .mainContainer {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
   min-height: 100vh;
-  width: 90%;
 }
 
 .firstSectionContainer {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  width: 60%;
+  justify-content: center;
+  padding: 5%;
   height: 100vh;
+}
+
+.buttonHome {
+  cursor: pointer;
+  font-family: "Raleway", sans-serif;
+  color: inherit;
+  margin-top: 12px;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid transparent;
+  transition: all .3s;
+  box-shadow: 6px 6px 12px #c5c5c5,
+  -6px -6px 12px #ffffff;
+}
+
+.buttonHome.dark {
+  background: #1a1717;
+  box-shadow: 6px 6px 12px #110e0e,
+  -6px -6px 12px #232321;
+}
+
+.buttonHome:hover {
+  border: 1px solid #ffae00;
+}
+
+.buttonHome:active {
+  box-shadow: 4px 4px 12px #c5c5c5,
+  -4px -4px 12px #ffffff;
 }
 
 .projectInfoContainer {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  min-height: 50vh;
+}
+
+.separator {
+  background: #e0e0e0;
+  width: 40%;
+  height: 4px;
+  margin: 100px 0;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15),
+  -2px -2px 10px rgba(255, 255, 255, 1), inset 2px 2px 10px rgba(0, 0, 0, 0.15),
+  inset -2px -2px 10px rgba(255, 255, 255, 1);
+  border-radius: 50px;
+}
+
+.separator.dark {
+  background: #1a1717;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.25),
+  -15px -15px 30px rgba(255, 255, 255, 0.03), inset 2px 2px 10px rgba(0, 0, 0,  0.25), inset -2px -2px 10px rgba(255, 255, 255, 0.03);
+}
+
+.titleImageContainer {
+  background: unset;
+  backdrop-filter: unset;
+}
+
+.speakerImage {
+  width: 100%;
+}
+
+.conceptProduct {
+  margin-top: 50px;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.issue {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  width: 90%;
+  margin-top: 50px;
+  text-align: justify;
 }
 
-.projectInfoContainer div {
-  padding: 10px;
-  width: 33%;
+.card {
+  cursor: pointer;
+  width: 90%;
+  margin: 5% 5%;
+  padding: 5% 5%;
+  border: 2px solid transparent;
+  border-radius: 20px;
+  background: #e0e0e0;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.1),
+  -15px -15px 30px rgba(255, 255, 255, 0.65);
+  transition: all 0.6s;
 }
 
-@media only screen and (max-width: 700px) {
-  .projectInfoContainer {
+.appSection {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  width: 80%;
+  justify-content: space-around;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.chipContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.chipContainer div {
+  margin: 40px 0
+}
+
+
+.appSection div {
+  margin-left: 0;
+  text-align: left;
+}
+
+.topButton {
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  width: 60px;
+  height: 34px;
+  fill: #ffae00;
+  border-radius: 30px;
+  border: 2px solid #ffae00;
+  cursor: pointer;
+}
+
+.topButton:hover.dark {
+  background: #ffae00;
+  fill: #1a1717;
+}
+
+.topButton:hover {
+  background: #ffae00;
+  fill: #e0e0e0;
+}
+
+/*
+.card:hover.dark p {
+  color: #e8e8e8;
+}
+
+.card:hover p {
+  color: black;
+}
+
+.card p {
+  color: transparent;
+}
+*/
+
+.cardDark {
+  background: #1a1717;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.25),
+  -15px -15px 30px rgba(255, 255, 255, 0.03);
+}
+
+.card:hover {
+  border: 2px solid #ffae00;
+  border-radius: 50px 5px 50px 5px;
+}
+
+
+@media only screen and (min-width: 764px) {
+  .appSection {
+    flex-wrap: unset;
+    display: flex;
+    width: 60%;
+    justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .conceptProduct {
+    margin-top: 50px;
+    display: flex;
+    width: 60%;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .card {
+    width: 45%;
+  }
+  .issue {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    width: 60%;
+    text-align: justify;
+    padding: 2%;
   }
-  .projectInfoContainer div {
-    width: 100%;
+  .appSection > div  {
+    margin-left: 10%;
+    text-align: left;
+  }
+  .speakerImage {
+    position: absolute;
+    right: 20%;
+    top: 28%;
+    width: 400px;
+  }
+  .titleImageContainer {
+    margin-left: 15%;
+    border-radius: 15px;
+  }
+  /* .projectInfoContainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+  } */
+  .productInfoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 90%;
+    margin-top: 100px;
+  }
+  .card {
+    padding: 4% 5%;
+    margin: 2% 2%;
   }
   .firstSectionContainer {
-    justify-content: start;
-    width: 100%;
+    padding: 0;
+    align-items: center;
+    flex-direction: row;
+    width: 80%;
     height: 100vh;
+  }
+  .titleImageContainer {
+    margin-left: 0;
+    padding: 30px;
+
+  }
+  .chipContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .chipContainer div {
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .speakerImage {
+    position: absolute;
+    right: 10%;
+    top: 20%;
+    width: 500px;
+  }
+  /* .projectInfoContainer {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+  } */
+  /* .card {
+    padding: 5% 3%;
+    width: 30%;
+  } */
+  .firstSectionContainer {
+    align-items: center;
+    width: 60%;
+    height: 100vh;
+  }
+  .productInfoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 60%;
   }
 }
