--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,2 +1,8 @@
-@import "globals.css";
-
+.menuContainer {
+    position: fixed;
+    top: 5%;
+    transition: all 0.4s;
+    display: flex;
+    justify-content: space-around;
+    width: 140%;
+}
