--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,6 +18,7 @@
   cursor: pointer;
   font-family: "Raleway", sans-serif;
   color: inherit;
+  margin-top: 12px;
   padding: 0.7em 1.7em;
   font-size: 18px;
   border-radius: 0.5em;
@@ -52,9 +53,9 @@
 
 .separator {
   background: #e0e0e0;
-  width: 80%;
-  height: 25px;
-  margin: 50px 0;
+  width: 40%;
+  height: 4px;
+  margin: 100px 0;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15),
   -2px -2px 10px rgba(255, 255, 255, 1), inset 2px 2px 10px rgba(0, 0, 0, 0.15),
   inset -2px -2px 10px rgba(255, 255, 255, 1);
@@ -77,14 +78,18 @@
 }
 
 .conceptProduct {
+  margin-top: 50px;
   display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .issue {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  width: 90%;
+  margin-top: 50px;
   text-align: justify;
 }
 
@@ -123,7 +128,7 @@
 
 .appSection div {
   margin-left: 0;
-  text-align: center;
+  text-align: left;
 }
 
 .topButton {
@@ -183,6 +188,24 @@
     margin-top: 50px;
     margin-bottom: 50px;
   }
+  .conceptProduct {
+    margin-top: 50px;
+    display: flex;
+    width: 60%;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .card {
+    width: 45%;
+  }
+  .issue {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    text-align: justify;
+    padding: 2%;
+  }
   .appSection > div  {
     margin-left: 10%;
     text-align: left;
@@ -206,10 +229,11 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    width: 90%;
+    margin-top: 100px;
   }
-
   .card {
-    padding: 5% 5%;
+    padding: 4% 5%;
     margin: 2% 2%;
   }
   .firstSectionContainer {
@@ -255,5 +279,11 @@
     align-items: center;
     width: 60%;
     height: 100vh;
+  }
+  .productInfoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 60%;
   }
 }
