--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,7 +126,7 @@ svg.logo {
 }
 
 p {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 150%;
   font-family: 'Chivo', sans-serif;
   transition: all .4s;
@@ -142,6 +142,7 @@ p.dark, h1.dark, h2.dark, h3.dark, div.dark {
 
 h1 {
   font-size: 50px;
+  margin: 0;
   font-family: 'Raleway', sans-serif;
   font-style: italic;
   font-weight: 900;
