--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,6 +3,30 @@
     top: 5%;
     transition: all 0.4s;
     display: flex;
-    justify-content: space-around;
-    width: 140%;
+    justify-content: space-between;
+    width: 80%;
+}
+
+
+@media only screen and (min-width: 764px) {
+    .menuContainer {
+        position: fixed;
+        top: 5%;
+        transition: all 0.4s;
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+    }
+}
+
+
+@media only screen and (min-width: 1200px) {
+    .menuContainer {
+        position: fixed;
+        top: 5%;
+        transition: all 0.4s;
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+    }
 }
