--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -1,30 +1,31 @@
 .team {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: baseline;
     margin-top: 100px;
     width: 90%;
 }
-
-@media only screen and (min-width: 764px) {
-    .team {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: baseline;
-        width: 60%;
-    }
-}
 .member {
     display: flex;
     text-align: center;
     flex-direction: column;
     align-items: center;
-    max-width: 300px;
-    height: 250px;
+    margin: 1%;
     justify-content: center;
-    width: 90%;
+    width: 50%;
 }
+
+@media only screen and (min-width: 764px) {
+    .team {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
+        width: 70%;
+    }
+    .member {
+        width: 30%;
+    }
+}
+
