--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,11 +60,20 @@ svg.sm {
   margin-right: 10px;
 }
 
-img:hover {
-  border: 2px solid #ffae00;
-  border-radius: 30px;
-  border-bottom-left-radius: 5px;
-  border-top-right-radius: 5px;
+h4 {
+  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  margin-top: 10px;
+}
+
+h4.dark {
+  color: white;
+}
+
+p.avatar {
+  margin-top: 5px;
+  font-size: 14px;
 }
 
 .body-light {
@@ -121,7 +130,8 @@ svg {
 svg.logo {
   width: 150px;
   height: unset;
-  margin-top: -50px;
+  margin-top: -60px;
+  margin-left: 0;
   transition: all .4s;
 }
 
@@ -174,6 +184,13 @@ h2 {
     font-size: 26px;
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
+  }
+  svg.logo {
+    width: 150px;
+    height: unset;
+    margin-top: -60px;
+    margin-left: -30px;
+    transition: all .4s;
   }
 }
 
