--- a/styles/globals.css
+++ b/styles/globals.css
@@ -150,6 +150,23 @@ p.dark, h1.dark, h2.dark, h3.dark, div.dark {
   color: #e8e8e8;
 }
 
+svg.button {
+  width: 40px;
+  height: 40px;
+  margin-left: 20px;
+  transition: all 0.4s;
+}
+
+svg:hover.button {
+  cursor: pointer;
+  fill: #ffae00;
+}
+
+.buttonContainer {
+  display: flex;
+  align-items: flex-end;
+}
+
 img.avatar {
   width: 150px;
   height: 150px;
@@ -172,6 +189,7 @@ h2 {
   font-size: 30px;
   font-family: 'Raleway', sans-serif;
   font-weight: 200;
+  margin-bottom: 34px;
   transition: all .4s;
 }
 
