--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,35 @@ img.dark {
   -15px -15px 30px rgba(255, 255, 255, 0.03);
 }
 
+img.r {
+  width: 120%;
+  height: 120%;
+  padding: 10px;
+}
+
+img.darkr {
+  background: #1a1717;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.25),
+  -15px -15px 30px rgba(255, 255, 255, 0.03);
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+@media only screen and (min-width: 764px) {
+  img.darkr {
+    background: #1a1717;
+    box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.25),
+    -15px -15px 30px rgba(255, 255, 255, 0.03);
+    width: 80%;
+    padding: 20px;
+  }
+  img.r {
+    width: 80%;
+    padding: 20px;
+  }
+}
+
 svg.sm {
   width: 25px;
   height: 25px;
